Experiments/resources/Regex.g4
grammar Regex;
  main: ref main | EOF;
  ref: characterClass | characterClass amount | specialCharacter | text ;
  text: ANY ;
  characterClass: '[' characterClassRange ']' | '[' characterClassLetters ']';
  characterClassLetters: .+?;
  characterClassRange: . '-' . | . '-' . characterClassRange ;
  specialCharacter: digit ;
  digit: '\\d' | '\\d' amount ;
  amount: atLeastOne | anyAmount | range ;
  atLeastOne: '+' ;
  anyAmount: '*' ;
  range: '{' NUMBER ',' NUMBER '}' ;
  NOT: '^';
  ANY: .+?;
  NUMBER: [0-9]+ ;
  WS: [ \t\r\n]+ -> skip ;
